<resources>
    <string name="app_name">FFH-REP</string>

    <!-- ======================= -->
    <!-- = START LOGIN STRINGS = -->
    <!-- ======================= -->
    <string name="title_login">¡Hora de Cazar!</string>
    <string name="user_input">Usuario</string>
    <string name="password_input">Clave</string>
    <string name="init_btn">Iniciar Sesion</string>
    <string name="hunter_register_btn">¡Registrarme!</string>
    <string name="comercio_register_btn">Registrarme como Comercio</string>
    <!-- ===================== -->
    <!-- = END LOGIN STRINGS = -->
    <!-- =====================-->


    <!-- ================================= -->
    <!-- = START REGISTER STRINGS = -->
    <!-- ================================= -->
    <string name="register_title">Formulario de Registro</string>
    <string name="register_title_comercio">Comercios</string>
    <string name="register_title_hunter">Hunter</string>

    <string name="input_nombre_rh">Nombre</string>
    <string name="input_apellido_rh">Apellido</string>
    <string name="input_dni_rh">DNI</string>
    <string name="input_sexo_rh">Sexo</string>
    <string name="input_email_r">Correo Electronico</string>
    <string name="input_telefono_r">Telefono</string>
    <string name="input_direccion_r">Direccion</string>
    <string name="input_fechanacimiento_rh">Fecha de Nacimiento</string>

    <string name="input_razonsocial_rc">Razon Social</string>
    <string name="input_cuit_rc">CUIT</string>
    <string name="input_rubro_rc">Rubro</string>

    <string name="btn_registrarme">Registrarme</string>
    <string name="btn_volver">Volver</string>
    <string name="title_activity_navigation_controller">NavigationController</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="title_1_register_common">Bien!</string>
    <string name="title_2_register_common">Primero, definamos tu usuario y contraseña</string>
    <!-- ================================ -->
    <!-- = END REGISTER STRINGS = -->
    <!-- ================================ -->


    <!-- ================================ -->
    <!-- == FRAGMENT HUNTER MI CUENTA  == -->
    <!-- ================================ -->

    <string name="hunter_micuenta_btn_editar">Editar Informacion</string>

    <!-- ================================ -->
    <!--  FIN FRAGMENT HUNTER MI CUENTA   -->
    <!-- ================================ -->

    <!-- ================================ -->
    <!-- == FRAGMENT COMERCIO MI CUENTA  == -->
    <!-- ================================ -->

    <string name="comercio_micuenta_btn_eliminar">Eliminar mi cuenta</string>

    <!-- ================================ -->
    <!--  FIN FRAGMENT COMERCIO MI CUENTA   -->
    <!-- ================================ -->

    <string name="te_scanQR">Escanear QR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="te_generarQR1">Se ha generado un nuevo QR</string>
    <string name="te_generarQR2"> Por favor, presentelo</string>
    <string name="title_activity_admin_principal">Admin_principal</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="titulo_admin">Bienvenido a la gestion de Food Hunter Hero</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="gestionar_comercios">Gestionar comercios</string>
    <string name="title_activity_articulo">activity_articulo</string>
    <string name="agregar_carrito">Agregar al carrito</string>
    <string name="title_activity_comercio">activity_comercio</string>
    <string name="title_activity_reseniar_comercio">Reseniar_comercio</string>
    <string name="titulo_resenia">Tu opinion nos interesa!</string>
    <string name="sub_titulo_resenia">Como fue tu experiencia de compra con este comercio?</string>
    <string name="mala">Mala</string>
    <string name="regular">Regular</string>
    <string name="buena">Buena</string>
    <string name="descripcion">Descripcion</string>
    <string name="precio">Precio</string>
    <string name="comentario">Dejanos un comentario</string>
    <string name="enviar">Enviar</string>
    <string name="btn_VerResenias">Ver reseñas</string>
    <string name="et_Articulos">Mis Articulos</string>
    <string name="comercios_adheridos">Cantidad de comercios adheridos</string>
    <string name="hunters_adheridos">Cantidad de hunters adheridos</string>
    <string name="hunter">Hunter</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="confirm_contraseña">Confirmar contraseña</string>
    <string name="comercio">Comercios</string>
    <string name="eligeRol">Elige tu rol!</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="estadisticas_titulo">Por favor, ingrese las fechas para generar las estadisticas</string>
    <string name="desde">Desde</string>
    <string name="hasta">Hasta</string>
    <string name="filtrar">Filtrar</string>
    <string name="productos_cazados">Productos cazados</string>
    <string name="comercios_aprobados">Comercios aprobados</string>
    <string name="cazadores_rango">Cazadores con rango maximo</string>
    <string name="cazadores_rango_m">Cazadores con rango minimo</string>
    <string name="editar_articulo">Editar articulo</string>
    <string name="ver">Ver</string>
    <string name="btn_VerMas">Ver más</string>
    <string name="shop">Shop</string>
    <string name="mis_articulos">Mis Articulos</string>
    <string name="mis_descuentos"> Mis Descuentos</string>
    <string name="mis_compras"> Mis Compras</string>
    <string name="descuentos">Mis descuentos</string>
    <string name="buscar">Buscar</string>
    <string name="productos">Productos</string>
    <string name="mi_carrito">Mi Carrito</string>
    <string name="puntos">Puntos : </string>
    <string name="finalizar_caza">Finalizar Caza</string>
    <string name="resenias">Reseñas del comercio</string>
    <string name="articulos">Articulos</string>
    <string name="rechazar">Rechazar</string>
    <string name="aprobar">Aprobar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_agregar_desc">Debe agregar una descripcion para el descuento, y una cantidad de puntos (mayor a 0) para que el hunter pueda obtenerlo</string>
    <string name="agregar_desc">Agregar descuento</string>
    <string name="titulo_modificar_descuento">Debe ingresar una descripcion nueva para el descuento, y una nueva cantidad de puntos requeridos (mayor a 0) para que el hunter pueda obtenerlo</string>
    <string name="modificar_descuento">Modificar descuento </string>
    <string name="micuenta">Informacion Personal</string>
    <string name="productos_aprobar">Productos a llevar</string>
    <string name="aprobar_caza">Aprobar Caza</string>
    <string name="id_general">ID</string>
    <string name="codigo">Código</string>
    <string name="Puntor_Req">Puntos requeridos</string>


</resources>